--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ deploy:
  app: multi-docker
  env: MultiDocker-env
  bucketname: elasticbeanstalk-us-east-2-040201380789
- bucketpath: docker-multi
+ bucketpath: multi-docker
  on:
   branch: master
  access_key_id: $AWS_ACCESS_KEY
